<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ANp-DD-hj5">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="QKE-Xa-2tH">
            <objects>
                <viewController id="ANp-DD-hj5" customClass="ViewController" customModule="PickpointDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Nee-jW-7Ns">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sYu-HX-GMS">
                                <rect key="frame" x="0.0" y="20" width="375" height="627"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Omv-rm-XT4">
                                        <rect key="frame" x="77.5" y="0.0" width="220" height="157"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="Get Cities from Boxberry"/>
                                        <connections>
                                            <action selector="tapCitiesBoxberry:" destination="ANp-DD-hj5" eventType="touchUpInside" id="CUA-VT-YBz"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cjH-td-9Ax">
                                        <rect key="frame" x="56.5" y="157" width="262" height="156.5"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="Get Pickpoints from Boxberry"/>
                                        <connections>
                                            <action selector="tapPickppointsBoxberry:" destination="ANp-DD-hj5" eventType="touchUpInside" id="Dib-y6-3aT"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G6p-G8-kqk">
                                        <rect key="frame" x="91.5" y="313.5" width="192" height="157"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="Get Cities from CDEK"/>
                                        <connections>
                                            <action selector="tapCitiesCDEK:" destination="ANp-DD-hj5" eventType="touchUpInside" id="UPo-eG-3vB"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oyo-5B-4kG">
                                        <rect key="frame" x="70.5" y="470.5" width="234" height="156.5"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="Get Pickpoints from CDEK"/>
                                        <connections>
                                            <action selector="tapPickpointsCDEK:" destination="ANp-DD-hj5" eventType="touchUpInside" id="j5D-4Q-p8R"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="sYu-HX-GMS" firstAttribute="top" secondItem="KQi-T2-3vQ" secondAttribute="top" constant="20" id="FC6-Vi-For"/>
                            <constraint firstItem="KQi-T2-3vQ" firstAttribute="trailing" secondItem="sYu-HX-GMS" secondAttribute="trailing" id="IoJ-vR-z09"/>
                            <constraint firstItem="sYu-HX-GMS" firstAttribute="leading" secondItem="KQi-T2-3vQ" secondAttribute="leading" id="Tx6-ss-7Oa"/>
                            <constraint firstItem="KQi-T2-3vQ" firstAttribute="bottom" secondItem="sYu-HX-GMS" secondAttribute="bottom" constant="20" id="dch-Y8-GoR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="KQi-T2-3vQ"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="tyN-lt-UaS" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="139" y="109"/>
        </scene>
    </scenes>
</document>
