//
//  PickpointClient_ExampleUITests.swift
//  PickpointClient_ExampleUITests
//
//  Created by Irina Romas on 27.04.2020.
//  Copyright © 2020 CocoaPods. All rights reserved.
//

import XCTest

class PickpointClient_ExampleUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        app/*@START_MENU_TOKEN@*/.staticTexts["Get Cities from Boxberry"]/*[[".buttons[\"Get Cities from Boxberry\"].staticTexts[\"Get Cities from Boxberry\"]",".staticTexts[\"Get Cities from Boxberry\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.staticTexts["Get Pickpoints from Boxberry"]/*[[".buttons[\"Get Pickpoints from Boxberry\"].staticTexts[\"Get Pickpoints from Boxberry\"]",".staticTexts[\"Get Pickpoints from Boxberry\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.staticTexts["Get Cities from CDEK"]/*[[".buttons[\"Get Cities from CDEK\"].staticTexts[\"Get Cities from CDEK\"]",".staticTexts[\"Get Cities from CDEK\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.staticTexts["Get Pickpoints from CDEK"]/*[[".buttons[\"Get Pickpoints from CDEK\"].staticTexts[\"Get Pickpoints from CDEK\"]",".staticTexts[\"Get Pickpoints from CDEK\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
